# test_django3.0

./: .pre-commit-config.yaml  README.md  activate_venv.sh  pyproject.toml  stupid_code.py
october/: manage.py
october/october/: asgi.py  settings.py  urls.py  wsgi.py
