[tool.poetry]
name = "3.0alpha"
version = "0.1.0"
description = "A test project"
authors = ["Nguyễn Thái Sơn <leoofcoltech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.0b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2.2"
black = {version = "^19.3b0", allows-prereleases = true}
isort = {version = "^4.3.21", allows-prereleases = true}
pre-commit = "^1.18.3"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

